--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password= password
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
