--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
-#for local system 
+spring.profiles.active=test
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/erp_generic 
-spring.datasource.username=root
-spring.datasource.password= 
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.show-sql: true
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
