--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,10 @@
 
-spring.datasource.url=jdbc:mysql://10.1.1.19:3306/read_1 
+spring.datasource.url=jdbc:mysql://10.1.1.19:3306/read_1
+
 spring.datasource.username=erp_generic
 spring.datasource.password=#Erp1generic 
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
