code commit@rahul
open indent form

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,4 +6,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql: true
 
+spring.mvc.format.date=yyyy-MM-dd
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
