--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,9 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://10.1.1.19:3306/read_1
-
-spring.datasource.username=erp_generic
-spring.datasource.password=#Erp1generic 
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://10.1.1.19:3306/ebs
+spring.datasource.username=erp_generic
+spring.datasource.password=#Erp1generic
+
 
 spring.jpa.hibernate.ddl-auto=update
 
