code commit@rahul
work in fragments

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>ERP-Solution</name>
 	<packaging>war</packaging>
 
-	
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -54,7 +54,10 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
 
 		<dependency>
@@ -72,12 +75,12 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		
-		
-		
-		<!-- for building war   -->
-		
-		
+
+
+
+		<!-- for building war -->
+
+
 	</build>
 
 </project>
