code commit@Rahul
working on quotation detail

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,4 +8,8 @@ spring.jpa.show-sql: true
 
 spring.mvc.format.date=yyyy-MM-dd
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+hibernate.dialect.storage_engine=innodb
+spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
