--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jackson.serialization.fail-on-empty-beans=false
