--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 	</dependencies>
 
 	<build>
+		 <finalName>Ebs</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -80,7 +81,7 @@
 
 		<!-- for building war -->
 
-
+		
 	</build>
 
 </project>
