--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
 	</dependencies>
 
 	<build>
-		 <finalName>Ebs</finalName>
+		 <finalName>ebs</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
