--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/cn.apiclub.tool/simplecaptcha -->
+		<dependency>
+			<groupId>cn.apiclub.tool</groupId>
+			<artifactId>simplecaptcha</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,7 +76,7 @@
 	</dependencies>
 
 	<build>
-		 <finalName>ebs</finalName>
+		<finalName>ebs</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -81,7 +88,7 @@
 
 		<!-- for building war -->
 
-		
+
 	</build>
 
 </project>
