--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,3 +15,6 @@ hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
