--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,4 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
 
