--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,6 @@
 
+server.port = 8181
+
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://10.1.1.19:3306/ebs
 spring.datasource.username=erp_generic
