--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -15,4 +15,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=25MB
+
 
