--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-
-
+		<start-class>com.access.erp.ErpSolutionApplication</start-class>
 	</properties>
 
 
@@ -105,9 +104,9 @@
 		</dependency>
 
 
-		
 
-		
+
+
 
 
 	</dependencies>
